--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+  <main>
+    <div class="container">
+      <h1>Counter</h1>
+      <span id="value">0</span>
+      <div class="button-container">
+        <button class="btn decrease">decrease</button>
+        <button class="btn reset">reset</button>
+        <button class="btn increase">increase</button>
+      </div>
+    </div>
+  </main>
   
     <!-- javascript -->
     <script src="app.js"></script>
